# motiva

./: .dockerignore  .gitignore  200925_data.dump  Dockerfile  LICENSE  README.md  chainlit_app.py  chainlit_db_data.dump  chainlit_db_dump.sql  compose.yaml  docker-compose.yaml  main.ipynb  postgres.sql  pyproject.toml
.chainlit/: config.toml
app/: auth.py  db.py  models.py
scripts/: init-db.sh
