[project]
name = "adv-camp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "chainlit>=2.5.5",
    "duckdb-engine>=0.17.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-deepseek>=0.1.3",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.24",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pytz>=2025.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
